// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BentoMenuButton Matches Snapshot (isDiv) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2:not(:disabled) {
  cursor: pointer;
}

.c2 > svg {
  color: inherit;
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: 32px;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c3:hover,
.c3[data-expanded="true"] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c3:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c3:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17:focus {
  outline: none;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c17:focus:not(:focus-visible) {
  box-shadow: none;
}

.c17:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #84C6EA;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c23:focus {
  outline: none;
}

.c23:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c23:focus:not(:focus-visible) {
  box-shadow: none;
}

.c23:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c22 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c18 {
  color: #006296;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c18:hover {
  color: #003A5A;
}

.c18:visited {
  color: #62a;
}

.c18:visited svg {
  color: #62a;
}

.c24 {
  color: #84C6EA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c24:visited {
  color: #62a;
}

.c24:visited svg {
  color: #62a;
}

.c21 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c20 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c20:focus {
  outline: none;
}

.c20:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c20:hover {
  background-color: #DBDEE1;
}

.c20:visited {
  color: #000000;
  fill: #000000;
}

.c20:visited svg {
  color: #000000;
  fill: #000000;
}

.c20[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

.c9 {
  margin: 0;
  padding: 0 var(--spacing-2x);
  padding-bottom: var(--spacing-1x);
}

.c10 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c10:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: 0 var(--spacing-2x);
}

.c12 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 2px 0;
  margin-right: var(--spacing-1x);
  padding: var(--spacing-1x);
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c15 {
  line-height: 1.25rem;
  margin: auto 0;
  margin-right: var(--spacing-1x);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c11:focus {
  outline: none;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c11:hover {
  background-color: #DBDEE1;
}

.c11[disabled],
.c11[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c16:focus {
  outline: none;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c16:hover {
  background-color: transparent;
}

.c16[disabled],
.c16[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c1 .c5 {
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  max-width: 384px;
  min-width: 200px;
  padding: var(--spacing-3x) 0;
  right: 0;
  width: initial;
}

.c1 .c5 .c19 {
  line-height: 1.5rem;
  padding: var(--spacing-half) var(--spacing-4x);
}

.c1 .c5 .c8 {
  margin: 0;
  margin-bottom: var(--spacing-1x);
  padding: 0 var(--spacing-4x);
}

.c1 .c5 ul:not(:last-child)::after,
.c1 .c5 ol:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: var(--spacing-2x) var(--spacing-4x);
  margin-bottom: var(--spacing-3x);
}

<div
  aria-label="Menu"
  class="c0 c1"
  data-testid="menu-button-wrapper"
>
  <button
    aria-expanded="false"
    class="c2 c3"
    data-expanded="false"
    data-testid="menu-button"
    type="button"
  >
    <svg
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c4 c5 c6"
    data-testid="menu-list"
    hidden=""
  >
    <h3
      class="c7 c8 c9"
      id="product-links"
    >
      Products
    </h3>
    <ul
      aria-labelledby="product-links"
      class="c10"
      data-testid="products-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <span
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option A
              </span>
            </div>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c16"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <span
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option B
              </span>
            </div>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <span
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option C
              </span>
            </div>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionD"
          href="/testd"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <span
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option D
              </span>
            </div>
          </span>
        </a>
      </li>
    </ul>
    <h3
      class="c7 c8 c9"
      id="external-links"
    >
      Resources
    </h3>
    <ul
      aria-labelledby="external-links"
      class="c10"
      data-testid="resources-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c17 c18 c19 c20"
          href="/testa"
          target="_blank"
          type="external"
        >
          <span
            class="c21"
          >
            Option A
          </span>
          <svg
            aria-label="open in new window"
            class="c22"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c23 c24 c19 c20"
          disabled=""
          target="_blank"
          type="external"
        >
          <span
            class="c21"
          >
            Option B
          </span>
          <svg
            aria-label="open in new window"
            class="c22"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BentoMenuButton Matches Snapshot 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2:not(:disabled) {
  cursor: pointer;
}

.c2 > svg {
  color: inherit;
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: 32px;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c3:hover,
.c3[data-expanded="true"] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c3:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c3:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17:focus {
  outline: none;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c17:focus:not(:focus-visible) {
  box-shadow: none;
}

.c17:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c23 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #84C6EA;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c23:focus {
  outline: none;
}

.c23:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c23:focus:not(:focus-visible) {
  box-shadow: none;
}

.c23:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c22 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c18 {
  color: #006296;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c18:hover {
  color: #003A5A;
}

.c18:visited {
  color: #62a;
}

.c18:visited svg {
  color: #62a;
}

.c24 {
  color: #84C6EA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c24:visited {
  color: #62a;
}

.c24:visited svg {
  color: #62a;
}

.c21 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c20 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c20:focus {
  outline: none;
}

.c20:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c20:hover {
  background-color: #DBDEE1;
}

.c20:visited {
  color: #000000;
  fill: #000000;
}

.c20:visited svg {
  color: #000000;
  fill: #000000;
}

.c20[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

.c9 {
  margin: 0;
  padding: 0 var(--spacing-2x);
  padding-bottom: var(--spacing-1x);
}

.c10 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c10:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: 0 var(--spacing-2x);
}

.c12 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 2px 0;
  margin-right: var(--spacing-1x);
  padding: var(--spacing-1x);
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c15 {
  line-height: 1.25rem;
  margin: auto 0;
  margin-right: var(--spacing-1x);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c11:focus {
  outline: none;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c11:hover {
  background-color: #DBDEE1;
}

.c11[disabled],
.c11[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c16:focus {
  outline: none;
}

.c16:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c16:hover {
  background-color: transparent;
}

.c16[disabled],
.c16[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

.c1 .c5 {
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  max-width: 384px;
  min-width: 200px;
  padding: var(--spacing-3x) 0;
  right: 0;
  width: initial;
}

.c1 .c5 .c19 {
  line-height: 1.5rem;
  padding: var(--spacing-half) var(--spacing-4x);
}

.c1 .c5 .c8 {
  margin: 0;
  margin-bottom: var(--spacing-1x);
  padding: 0 var(--spacing-4x);
}

.c1 .c5 ul:not(:last-child)::after,
.c1 .c5 ol:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: var(--spacing-2x) var(--spacing-4x);
  margin-bottom: var(--spacing-3x);
}

<nav
  aria-label="Menu"
  class="c0 c1"
  data-testid="menu-button-wrapper"
>
  <button
    aria-expanded="false"
    class="c2 c3"
    data-expanded="false"
    data-testid="menu-button"
    type="button"
  >
    <svg
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c4 c5 c6"
    data-testid="menu-list"
    hidden=""
  >
    <h3
      class="c7 c8 c9"
      id="product-links"
    >
      Products
    </h3>
    <ul
      aria-labelledby="product-links"
      class="c10"
      data-testid="products-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionA"
          href="/testa"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <span
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option A
              </span>
            </div>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c16"
          data-testid="listitem-optionB"
          disabled=""
          href="/testb"
          tabindex="-1"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <span
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option B
              </span>
            </div>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionC"
          href="/testc"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <span
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option C
              </span>
            </div>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c11"
          data-testid="listitem-optionD"
          href="/testd"
          tabindex="0"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="c12"
            color="currentColor"
            focusable="false"
            height="22"
            width="22"
          />
          <span
            class="c13"
          >
            <div
              class="c14"
            >
              <span
                class="c15"
              >
                Option D
              </span>
            </div>
          </span>
        </a>
      </li>
    </ul>
    <h3
      class="c7 c8 c9"
      id="external-links"
    >
      Resources
    </h3>
    <ul
      aria-labelledby="external-links"
      class="c10"
      data-testid="resources-group"
    >
      <li>
        <a
          aria-disabled="false"
          class="c17 c18 c19 c20"
          href="/testa"
          target="_blank"
          type="external"
        >
          <span
            class="c21"
          >
            Option A
          </span>
          <svg
            aria-label="open in new window"
            class="c22"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c23 c24 c19 c20"
          disabled=""
          target="_blank"
          type="external"
        >
          <span
            class="c21"
          >
            Option B
          </span>
          <svg
            aria-label="open in new window"
            class="c22"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
